[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "desugar"
author = "Brett Cannon"
author-email = "brett@python.org"
home-page = "https://github.com/brettcannon/desugar"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.8"
description-file = "README.md"

[tool.flit.metadata.requires-extra]
test = ["pytest==6.2.5", "pytest-asyncio==0.15.1"]
dev = ["black==20.8b1"]
